--- a/CodeMask/ThemeTest/MainWindow.xaml
+++ b/CodeMask/ThemeTest/MainWindow.xaml
@@ -33,6 +33,9 @@
         </Menu>
         <UniformGrid Columns="1" Rows="1">
             <TabControl SelectedIndex="-1" TabStripPlacement="Left">
+                <TabItem Header="CalloutShape">
+                    <local:CalloutShapeDemo />
+                </TabItem>
                 <TabItem Header="LoadingIndicator">
                     <cm:AutoGrid HorizontalAlignment="Stretch"
                                  VerticalAlignment="Stretch"
@@ -74,14 +77,11 @@
                                 </StackPanel.Resources>
                                 <TextBox x:Name="tb" Height="20" />
                                 <TextBlock Text="{Binding ElementName=tb, Path=Text, Converter={cm:UpperConverter}}" />
-                                <TextBlock
-                                    Text="{Binding ElementName=tb, Path=Text, Converter={StaticResource UpperConverter}}" />
+                                <TextBlock Text="{Binding ElementName=tb, Path=Text, Converter={StaticResource UpperConverter}}" />
                                 <TextBlock Text="{Binding ElementName=tb, Path=Text, Converter={cm:LowerConverter}}" />
-                                <TextBlock
-                                    Text="{Binding ElementName=tb, Path=Text, Converter={StaticResource LowerConverter}}" />
+                                <TextBlock Text="{Binding ElementName=tb, Path=Text, Converter={StaticResource LowerConverter}}" />
                                 <TextBlock Text="{Binding ElementName=tb, Path=Text, Converter={cm:TrimConverter}}" />
-                                <TextBlock
-                                    Text="{Binding ElementName=tb, Path=Text, Converter={StaticResource TrimConverter}}" />
+                                <TextBlock Text="{Binding ElementName=tb, Path=Text, Converter={StaticResource TrimConverter}}" />
                             </StackPanel>
                         </TabItem>
                     </TabControl>
