--- a/CodeMask/ThemeTest/MainWindow.xaml
+++ b/CodeMask/ThemeTest/MainWindow.xaml
@@ -75,15 +75,40 @@
                                     <cm:LowerConverter x:Key="LowerConverter" />
                                     <cm:TrimConverter x:Key="TrimConverter" />
                                 </StackPanel.Resources>
-                                <TextBox x:Name="tb"
+                                <TextBox x:Name="BadBinding"
                                          Height="20"
                                          Text="{Binding BadBinding}" />
+                                <TextBox x:Name="tb" Height="20" />
                                 <TextBlock Text="{Binding ElementName=tb, Path=Text, Converter={cm:UpperConverter}}" />
                                 <TextBlock Text="{Binding ElementName=tb, Path=Text, Converter={StaticResource UpperConverter}}" />
                                 <TextBlock Text="{Binding ElementName=tb, Path=Text, Converter={cm:LowerConverter}}" />
                                 <TextBlock Text="{Binding ElementName=tb, Path=Text, Converter={StaticResource LowerConverter}}" />
                                 <TextBlock Text="{Binding ElementName=tb, Path=Text, Converter={cm:TrimConverter}}" />
                                 <TextBlock Text="{Binding ElementName=tb, Path=Text, Converter={StaticResource TrimConverter}}" />
+                                <Separator />
+                                <UniformGrid Rows="4">
+                                    <UniformGrid.Resources>
+                                        <Style TargetType="TextBox">
+                                            <Setter Property="Width" Value="100"></Setter>
+                                        </Style>
+                                    </UniformGrid.Resources>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBox x:Name="tb_upper" Height="20" />
+                                        <TextBlock Text="{Binding ElementName=tb_upper, Path=Text, Converter={cm:CaseConverter Upper}}" />
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBox x:Name="tb_Lower" Height="20" />
+                                        <TextBlock Text="{Binding ElementName=tb_Lower, Path=Text, Converter={cm:CaseConverter Lower}}" />
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBox x:Name="tb_LU" Height="20" />
+                                        <TextBlock Text="{Binding ElementName=tb_LU, Path=Text,Mode=TwoWay, Converter={cm:CaseConverter SourceCasing=Lower, TargetCasing=Upper}}" />
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBox x:Name="tb_UL" Height="20" />
+                                        <TextBlock Text="{Binding ElementName=tb_UL, Path=Text, Converter={cm:CaseConverter SourceCasing=Upper, TargetCasing=Lower}}" />
+                                    </StackPanel>
+                                </UniformGrid>
                             </StackPanel>
                         </TabItem>
                     </TabControl>
