--- a/CodeMask/CodeMask.WPF.Controls/Themes/Generic.xaml
+++ b/CodeMask/CodeMask.WPF.Controls/Themes/Generic.xaml
@@ -1,6 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/CodeMask.WPF.Controls;component/Progress/LoadingIndicator/Styles/Style.xaml" />
+        <ResourceDictionary Source="/CodeMask.WPF.Controls;component/RadialMenu/Styles/Style.xaml" />
         <ResourceDictionary Source="/CodeMask.WPF.Controls;component/Panels/DragDock/DragDock.xaml" />
         <ResourceDictionary Source="/CodeMask.WPF.Controls;component/Themes/TreeListView.xaml" />
     </ResourceDictionary.MergedDictionaries>
