--- a/CodeMask/ThemeTest/MainWindow.xaml
+++ b/CodeMask/ThemeTest/MainWindow.xaml
@@ -493,6 +493,9 @@
                 <TabItem Header="RadialMenu">
                     <local:RadialMenuDemo />
                 </TabItem>
+                <TabItem Header="resourceBindingDemo">
+                    <local:resourceBindingDemo />
+                </TabItem>
             </TabControl>
         </UniformGrid>
 
